Added support for listenting to LaunchpadInput (Class names might be confuising right now)

--- a/Launchpad.Midi/Launchpad.Midi.csproj
+++ b/Launchpad.Midi/Launchpad.Midi.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Launchpad.Core\Launchpad.Core.csproj" />
+  </ItemGroup>
+
 </Project>
